@@ -13,7 +13,15 @@ if (! $mech) {
     plan skip_all => "Couldn't connect to MozRepl: $@";
     exit
 } else {
-    plan tests => 4;
+    plan tests => 5;
+};
+
+sub save {
+    my ($data,$filename) = @_;
+    open my $fh, '>', $filename
+        or die "Couldn't create '$filename': $!";
+    binmode $fh;
+    print {$fh} $data;
 };
 
 isa_ok $mech, 'WWW::Mechanize::FireFox';
@@ -27,21 +35,26 @@ Hello <b id="my_name">PNG</b>!
 </body>
 </html>
 HTML
-
 ok $mech->success, 'We got the page';
 
 my $pngData = $mech->content_as_png();
 
 like $pngData, '/^.PNG/', "The result looks like a PNG format file";
 
-open my $fh, '>', 'page.png' or die;
-binmode $fh;
-print {$fh} $pngData;
+#save( $pngData, 'page.png' );
 
 my $pngName = $mech->selector("#my_name", single => 1);
 $pngData = $mech->element_as_png($pngName);
 like $pngData, '/^.PNG/', "The result looks like a PNG format file";
 
-open my $fh, '>', 'element.png' or die;
-binmode $fh;
-print {$fh} $pngData;
+#save( $pngData, 'element.png' );
+
+my $rect = { left  =>    0,
+    top   =>    0,
+    width  => 200,
+    height => 200,
+};
+my $topleft = $mech->content_as_png(undef, $rect);
+like $topleft, '/^.PNG/', "The result looks like a PNG format file";
+
+#save( $topleft, 'topleft.png' );
