@@ -1,5 +1,6 @@
 0.07 200911xx
     . Added 'single' option to ->selector() and ->xpath()
+    . Added capture of arbitrary rectangles to ->content_as_png()
 
 0.06 20091031
     . added 'autoclose' parameter to specify whether the
